<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <RelativeLayout
            android:id="@+id/music_root"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="20dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

            <RelativeLayout
                    android:id="@+id/infolayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/shuffrepeat"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp">

                <!-- This is the LinearLayout that contains function buttons and album/artist/track info -->

                <LinearLayout
                        android:id="@+id/infodetail"
                        android:layout_width="@dimen/detail_max_length"
                        android:layout_height="match_parent"
                        android:layout_alignBottom="@+id/album"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="@dimen/center_margin"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                    <TextView
                            android:id="@+id/trackname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="marquee"
                            android:layout_marginTop="10dp"
                            android:marqueeRepeatLimit="marquee_forever"
                            android:gravity="center_vertical"
                            android:singleLine="true"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:textColor="@color/white"
                            android:text="@string/unknown_track_name"
                            android:textSize="@dimen/text_primary_size"
                            android:textStyle="bold"/>

                    <TextView
                            android:id="@+id/artistname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:layout_marginTop="30dp"
                            android:gravity="center_vertical"
                            android:text="@string/unknown_artist_name"
                            android:singleLine="true"
                            android:drawableLeft="@drawable/icon_artist"
                            android:textColor="@color/media_control_artist_album_text_color"
                            android:textSize="@dimen/text_second_size"/>


                    <TextView
                            android:id="@+id/albumname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="7dip"
                            android:ellipsize="end"
                            android:gravity="center_vertical"
                            android:singleLine="true"
                            android:drawableLeft="@drawable/icon_album"
                            android:text="@string/unknown_album_name"
                            android:textColor="@color/media_control_artist_album_text_color"
                            android:textSize="@dimen/text_second_size"/>

                </LinearLayout>

                <ImageView
                        android:id="@+id/album_bg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/album_margin_left"
                        android:background="@drawable/album_photo"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/center_margin"/>

                <ImageView
                        android:id="@+id/album"
                        android:layout_width="@dimen/album_size"
                        android:layout_height="@dimen/album_size"
                        android:layout_marginLeft="63dp"
                        android:padding="10dp"
                        android:scaleType="center"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="62dp"/>

                <RelativeLayout
                        android:id="@+id/loading_root"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="gone"
                        android:layout_centerInParent="true">

                    <ProgressBar
                            android:id="@+id/progressbar"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            style="@style/Progress_circle"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="40dp"/>

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_below="@+id/progressbar"
                            android:layout_marginTop="10dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/data_loading_text"
                            android:textColor="@color/text_theme_color"
                            android:textSize="@dimen/text_second_size"/>
                </RelativeLayout>
            </RelativeLayout>

            <LinearLayout
                    android:id="@+id/shuffrepeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="20dp"
                    android:gravity="bottom"
                    android:orientation="horizontal"
                    android:visibility="visible">

                <ImageButton
                        android:id="@+id/shuffle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:visibility="gone"
                        android:background="@android:color/transparent"
                        android:focusable="true"
                        android:src="@drawable/shuffle_disable_selector"/>
            </LinearLayout>

            <include
                    android:id="@+id/bottomLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    layout="@layout/media_controller"
                    android:focusable="false"/>
        </RelativeLayout>

        <ImageButton
                android:id="@+id/optionbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_centerHorizontal="true"
                android:focusable="true"
                android:visibility="invisible"/>
    </RelativeLayout>

    <FrameLayout
            android:id="@+id/nomedia_root"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

        <TextView
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:drawablePadding="15dp"
                android:text="@string/no_media_text"
                android:textColor="@color/text_theme_color"
                android:textSize="@dimen/text_big_size"/>
    </FrameLayout>

</FrameLayout>
